# otus-cpp-prof-hw-12-map-reduce

./: CMakeLists.txt  Doxyfile  annotated.html  classMap-members.html  classMap.html  classMapFunctor-members.html  classMapFunctor.html  classMapReduce-members.html  classMapReduce.html  classOptionsReader-members.html  classOptionsReader.html  classReduce-members.html  classReduce.html  classReduceFunctor-members.html  classReduceFunctor.html  classShuffle-members.html  classShuffle.html  classes.html  containers_8cpp.html  containers_8cpp__incl.map  containers_8cpp__incl.md5  containers_8h.html  containers_8h__dep__incl.map  containers_8h__dep__incl.md5  containers_8h__incl.map  containers_8h__incl.md5  containers_8h_source.html  dir_000002_000000.html  dir_000002_000001.html  dir_000002_000004.html  dir_000004_000000.html  dir_4a7e9e237a4c9972e4fd502274889ebd.html  dir_4a7e9e237a4c9972e4fd502274889ebd_dep.map  dir_4a7e9e237a4c9972e4fd502274889ebd_dep.md5  dir_54a16e8a6af77844e3471faa99e133bf.html  dir_7ce5e49163845c5e031c6176ed020142.html  dir_7ce5e49163845c5e031c6176ed020142_dep.map  dir_7ce5e49163845c5e031c6176ed020142_dep.md5  dir_8eeca6946e4bdad552f3ceba303e57db.html  dir_8eeca6946e4bdad552f3ceba303e57db_dep.map  (+90 more)
.github/workflows/: release.yml
options_reader/: options_reader.cpp  options_reader.h
search/: all_0.js  all_1.js  all_3.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_4.js  files_6.js  files_7.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js
yamr/containers/: containers.cpp  containers.h
yamr/functors/: functors.cpp  functors.h
yamr/map_reduce/: map.cpp  map.h  map_reduce.cpp  map_reduce.h  reduce.cpp  reduce.h
yamr/shuffle/: shuffle.cpp  shuffle.h
